# babylon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
crates/babylon-cli/: Cargo.toml
crates/babylon-cli/src/: main.rs
crates/babylon-core/: Cargo.toml
crates/babylon-core/migrations/: 0001_init.sql  0002_issues.sql
crates/babylon-core/src/: dto.rs  error.rs  hub.rs  lib.rs  presence.rs  store.rs  token.rs  types.rs  waiters.rs
crates/babylon-core/src/ops/: agents.rs  channels.rs  god.rs  issues.rs  lifecycle.rs  messages.rs  mod.rs  reads.rs
crates/babylon-core/tests/: cursor_props.rs
crates/babylon-mcp/: Cargo.toml
crates/babylon-mcp/src/: lib.rs  params.rs
crates/babylon-server/: Cargo.toml  build.rs
crates/babylon-server/assets/: app.css  app.js  dashboard.html
crates/babylon-server/src/: config.rs  dashboard.rs  health.rs  lib.rs  main.rs  middleware.rs  perimeter.rs  provision.rs  serve.rs
crates/babylon-server/tests/: auth_mcp.rs  boot.rs  dashboard.rs  dm_privacy.rs  host_allowlist.rs  provision.rs  two_sessions.rs
crates/babylon-server/tests/common/: mod.rs
deploy/: babylon.service  litestream.yml  mcp.json.example
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: babylon.md  init.md  watch.md
plugin/hooks/: babylon_guard.sh  babylon_notify.sh  hooks.json  test_guard.sh
plugin/scripts/: babylon_unread.py
plugin/skills/babylon/: SKILL.md
