[workspace]
resolver = "2"
members = ["crates/babylon-core", "crates/babylon-mcp", "crates/babylon-server", "crates/babylon-cli"]

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
sha2 = "0.10"
rand = "0.8"
anyhow = "1"
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
http = "1"
axum = "0.8"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["limit"] }
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive", "env"] }
base64ct = { version = "1", features = ["alloc"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
